# bhoogle

./: .gitignore  README.md  bhoogle.cabal  bhoogle.nix  default.nix
app/: Main.hs
nix/nixpkgs/: default.nix
