cabal-version:       2.2
name:                bhoogle
version:             0.1.3.5
synopsis:            Simple terminal GUI for local hoogle.
description:         bhoogle is a terminal GUI layer over local hoogle. It provides search ahead and sub-string filtering in addition to the usual type-search.
homepage:            https://github.com/andrevdm/bhoogle#readme
license:             BSD-3-Clause OR Apache-2.0
license-file:        LICENSE
author:              Andre Van Der Merwe
maintainer:          andre@andrevdm.com
copyright:           2018 Andre Van Der Merwe
category:            Development, Terminal
build-type:          Simple
extra-source-files:  README.md

executable bhoogle
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wimplicit-prelude
  build-depends:       base >= 4.9.1.0 && <5
                     , protolude >= 0.2.2 && < 0.2.5
                     , text >= 1.2.3.0 && < 1.2.5.0
                     , bytestring >= 0.10.8.2 && < 0.10.11.0
                     , directory >= 1.3.0.2 && < 1.4
                     , filepath >= 1.4.1.2 && < 1.5
                     , containers >= 0.5.11.0
                     , brick >= 0.37.1 && < 0.60.0
                     , vty >= 5.21 && < 5.27
                     , vector >= 0.12.0.1 && < 0.13
                     , process >= 1.6.3.0 && < 1.7
                     , lens >= 4.16.1 && < 4.20
                     , time >= 1.8.0.2 && < 1.10
                     , hoogle >= 5.0.17.3 && < 5.0.19.0
                     , typed-process >= 0.2.2.0 && < 0.2.7.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrevdm/bhoogle
